# bitcraft

./: .gitignore  CMakeLists.txt  DEPS  README.md  bitcraft.podspec  vendor.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/bitcraft/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
ios/BitcraftViewer/: AppDelegate.m  ViewController.h  main.m
ios/BitcraftViewer.xcodeproj/: project.pbxproj
ios/BitcraftViewer.xcodeproj/project.xcworkspace/xcuserdata/lijinxiang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BitcraftViewer.xcodeproj/xcuserdata/lijinxiang.xcuserdatad/xcschemes/: xcschememanagement.plist
linux/: CMakeLists.txt  main.cpp
mac/: .gitignore  CMakeLists.txt  Podfile  build_bitcraft.sh  main.cpp
mac/BitcraftViewer/: AppDelegate.h  ViewController.m
mac/BitcraftViewer/Base.lproj/: Main.storyboard
mac/rendering/: GLFWDevice.cpp  GLFWDevice.h  GLFWDrawable.cpp  GLFWDrawable.h  GLFWProxyWindow.cpp  GLFWProxyWindow.h  OpenGLProcGetter.cpp  OpenGLProcGetter.h
src/base/codec/: Codec.cpp  Codec.h  CompressionCodec.cpp  CompressionCodec.h  EncryptionCodec.cpp  EncryptionCodec.h  PacketCodec.cpp  PacketCodec.h  SizerCodec.cpp  SizerCodec.h
src/base/codec/aese/: AESEncrypter.cpp  AESEncrypter.h
src/base/io/: ByteData.cpp  ByteData.h  ByteOrder.cpp  ByteOrder.h  DecodeStream.cpp  DecodeStream.h  EncodeStream.cpp  EncodeStream.h  ReadWriteable.h
src/base/model/configuration/: RegistryEntry.cpp  RegistryEntry.h
src/base/model/ingame/: GlobalPos.cpp  GlobalPos.h  PlayerSpawnInfo.cpp  PlayerSpawnInfo.h
src/base/model/nbt/: Nbt.cpp  Nbt.h  Tag.cpp  Tag.h  TagByte.cpp  TagByte.h  TagByteArray.cpp  TagByteArray.h  TagCompound.cpp  TagCompound.h  TagDouble.cpp  TagDouble.h  TagFloat.cpp  TagFloat.h  TagInt.cpp  TagInt.h  TagIntArray.cpp  TagIntArray.h  TagList.cpp  TagList.h  TagLong.cpp  TagLong.h  TagLongArray.cpp  TagLongArray.h  TagShort.cpp  TagShort.h  TagString.cpp  TagString.h
src/base/model/world/: BlockEntityInfo.cpp  BlockEntityInfo.h  Column.h  LightUpdateData.cpp  LightUpdateData.h  Section.h  Wrold.cpp  Wrold.h
src/base/protocol/: BitcraftClient.cpp  BitcraftClient.h  ClientBoundPackets.h  ConnectSession.cpp  ConnectSession.h  DataTypes.cpp  DataTypes.h  MinecraftProtocol.cpp  MinecraftProtocol.h  Packet.h  PacketFactory.cpp  PacketFactory.h
src/base/protocol/configuration/clientbound/: ClientboundRegistryDataPacket.cpp  ClientboundUpdateTagsPacket.cpp  CustomPayloadPacket.cpp  FinishConfigurationPacket.cpp  SelectKnownPacksPacket.cpp  UpdateEnabledFeaturesPacket.cpp
src/base/protocol/configuration/serverbound/: AcknowledgeFinishConfigurationPacket.cpp  AcknowledgeFinishConfigurationPacket.h  ServerboundSelectKnownPacksPacket.cpp  ServerboundSelectKnownPacksPacket.h
src/base/protocol/data/: KnownPack.cpp  KnownPack.h  RegistryEntry.cpp  RegistryEntry.h
src/base/protocol/handshake/: HandshakePacket.cpp  HandshakePacket.h
src/base/protocol/ingame/clientbound/: ClientboundChangeDifficultyPacket.cpp  ClientboundLoginPacket.cpp  ClientboundSetPlayerPositionPacket.cpp  ClientboundSpawnEntityPacket.cpp  ClientboundSynchronizePlayerPositionPacket.cpp  ServerKeepAlivePacket.cpp  ServerKeepAlivePacket.h
src/base/protocol/ingame/clientbound/chunk/: ServerChunkDataPacket.cpp  (+2 more)
src/base/protocol/ingame/serverbound/: ClientChatPacket.cpp  ClientChatPacket.h  ClientKeepAlivePacket.cpp  ClientKeepAlivePacket.h  ClientStatusPacket.cpp  ClientStatusPacket.h  ConfirmTeleportationPacket.cpp  ConfirmTeleportationPacket.h  ServerboundChatPacket.cpp  ServerboundChatPacket.h  ServerboundPlayerLoadedPacket.cpp  ServerboundPlayerLoadedPacket.h
src/base/protocol/login/clientbound/: LoginDisconnectPacket.cpp  LoginSuccess.cpp  SetCompressionPacket.cpp
src/base/protocol/login/server/: LoginSuccess.cpp  LoginSuccess.h  SetCompressionPacket.cpp  SetCompressionPacket.h
src/base/protocol/login/serverbound/: LoginAcknowledgedPacket.cpp  LoginStartPacket.cpp  LoginStartPacket.h
src/base/protocol/status/client/: StatusPingPacket.cpp  StatusRequestPacket.h
src/base/protocol/status/clientbound/: StatusPongPacket.cpp  StatusResponsePacket.cpp
src/base/protocol/status/server/: StatusPongPacket.cpp  StatusPongPacket.h  StatusResponsePacket.cpp  StatusResponsePacket.h
src/base/protocol/status/serverbound/: StatusPingPacket.h  StatusRequestPacket.cpp
src/base/utils/: LockGuard.h  Log.h  ScopedLock.cpp  ScopedLock.h  Task.cpp  Task.h  TaskGroup.cpp  TaskGroup.h
src/gpu/: Canvas.cpp  Canvas.h  Context.cpp  Context.h  Device.cpp  Device.h  ResourceCache.cpp  Surface.cpp  Surface.h  Texture.h  Window.cpp
src/gpu/core/: BytesKey.cpp  Clock.cpp
src/gpu/opengl/: GLBuffer.cpp  GLCanvas.cpp  GLCanvas.h  GLCaps.h  GLContext.cpp  GLRenderTarget.cpp  GLRenderTarget.h  GLSurface.cpp  GLSurface.h  GLTexture.cpp  GLTexture.h  GLUtil.cpp  GLUtil.h
src/gpu/opengl/egl/: EGLDevice.cpp
src/minecraft/: CraftAssets.cpp  CraftAssets.h
src/minecraft/registry/: BlockRegistry.cpp  BlockRegistry.h
src/minecraft/world/: BlockState.cpp  BlockState.h
src/platform/: Print.cpp  Print.h
src/platform/android/: AndroidTest.cpp  AndroidTest.h  GPUDrawable.cpp  GPUDrawable.h  JBitCraftClient.cpp  JBitCraftClient.h  JCraftSurface.cpp  JCraftSurface.h  JMinecraftProtocol.cpp  JMinecraftProtocol.h  JNIEnvironment.cpp  JNIEnvironment.h  JNIHelper.cpp  JNIHelper.h  Local.h  Print.cpp
src/platform/cocoa/: MinecraftProtocol.h  MinecraftProtocol.m
src/platform/cocoa/private/: MinecraftProtocolImpl.h  MinecraftProtocolImpl.mm
src/rendering/: AssetManager.cpp  AssetManager.h  Atlas.cpp  Atlas.h  BlockStates.cpp  BlockStates.h  CraftSurface.cpp  CraftSurface.h  Drawable.cpp  Drawable.h  Face.cpp  Face.h  Graphic.h  McRenderer.cpp  McRenderer.h  Texture.cpp  Texture.h  file.h
src/rendering/core/: Box.h
src/rendering/model/: Element.cpp  Element.h  FaceInfo.cpp  FaceInfo.h  Model.cpp  Model.h
(+13 files in other folders)
